# QA-Assesment

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: debug_page.txt  main.py
app/dimensions/: performance.py  security.py  technical.py  utils.py  ux.py
app/exceptions/: exceptions.py
app/front/: index.html
app/interfaces/: interfaces.py
app/schemas/: generate.py
app/services/: page_fetcher.py  qa_analyzer.py  report_generator.py  utils.py
